--- a/views/friends/index.hbs
+++ b/views/friends/index.hbs
@@ -4,41 +4,9 @@
   </form>
 <h4>Friend Requests</h4>
 <hr/>
-<div id= "friends-container" class="column-container d-flex flex-wrap">
-<div class="row row-cols-3">
-<div class="col-6 .d-md-flex">
-  <h5 class="title">Requests To You</h5>
-  <ul>
-    {{#each requestsToMe}}
-
-      <li>
-        <form
-          id="accept-friend"
-          action="/friends/accept/{{this.id}}"
-          method="post"
-        >
-          <input id="submit" type="submit" value="Accept" />
-        </form>
-        <a href="users/profile/{{this.username}}">{{this.firstName}}
-          {{this.lastName}}</a>
-
-      </li>
-    {{/each}}
-  </ul>
-</div>
-<div class="col-6 .d-md-flex">
-  <h5 class="title">Requests by you</h5>
-  <ul>
-    {{#each requestsFromMe}}
-
-      <li>
-        <a href="users/profile/{{this.username}}">{{this.firstName}}
-          {{this.lastName}}</a>
-      </li>
-    {{/each}}
-  </ul>
-</div>
-<div class="col-12 .d-md-flex">
+<div id= "friends-container" class="container">
+<div class="row">
+  <div class="col-4">
   <h5 class="title">Friends</h5>
   <ul>
     {{#each friends}}
@@ -58,6 +26,40 @@
     {{/each}}
   </ul>
 </div>
+
+<div class="col-4">
+  <h5 class="title">Requests To You</h5>
+  <ul>
+    {{#each requestsToMe}}
+
+      <li>
+        <form
+          id="accept-friend"
+          action="/friends/accept/{{this.id}}"
+          method="post"
+        >
+          <input id="submit" type="submit" value="Accept" />
+        </form>
+        <a href="users/profile/{{this.username}}">{{this.firstName}}
+          {{this.lastName}}</a>
+
+      </li>
+    {{/each}}
+  </ul>
+</div>
+<div class="col-4">
+  <h5 class="title">Requests by you</h5>
+  <ul>
+    {{#each requestsFromMe}}
+
+      <li>
+        <a href="users/profile/{{this.username}}">{{this.firstName}}
+          {{this.lastName}}</a>
+      </li>
+    {{/each}}
+  </ul>
+</div>
+
 
 
 </div>
