--- a/views/users/new.hbs
+++ b/views/users/new.hbs
@@ -42,7 +42,7 @@
   <li>
   <label for="password">Confirm password: </label>
   <input id="confirmPassword" type="password" name="confirmPassword" value="" placeholder="confirm your password" required="true"/>
-  <input id="submit" type="submit" value="Submit" />
+  <input class = "input-button" id="submit" type="submit" value="Submit" />
   </li>
   </div>
 </ul>
