--- a/views/users/profile.hbs
+++ b/views/users/profile.hbs
@@ -1,91 +1,108 @@
-<!doctype html>
-<html lang="en">
+<html lang='en'>
   <head>
-    <nav class="navbar navbar-expand-lg bg-light">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">AceBook</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-          data-bs-target="#navbarNav" aria-controls="navbarNav"
-          aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
+    <nav class='navbar navbar-expand-lg bg-light'>
+      <div class='container-fluid'>
+        <a class='navbar-brand' href='#'>AceBook</a>
+        <button
+          class='navbar-toggler'
+          type='button'
+          data-bs-toggle='collapse'
+          data-bs-target='#navbarNav'
+          aria-controls='navbarNav'
+          aria-expanded='false'
+          aria-label='Toggle navigation'
+        >
+          <span class='navbar-toggler-icon'></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/posts">Home</a>
+        <div class='collapse navbar-collapse' id='navbarNav'>
+          <ul class='navbar-nav'>
+            <li class='nav-item'>
+              <a
+                class='nav-link active'
+                aria-current='page'
+                href='/posts'
+              >Home</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/users/profile">Profile</a>
+            <li class='nav-item'>
+              <a class='nav-link' href='/users/profile'>Profile</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/search">Search</a>
+            <li class='nav-item'>
+              <a class='nav-link' href='/search'>Search</a>
             </li>
-            <li class="nav-item">
+            <li class='nav-item'>
               <form action='/sessions?_method=DELETE' method='POST'>
-                <input type="submit" value="Logout" />
+                <input type='submit' value='Logout' />
               </form>
             </li>
           </ul>
         </div>
       </div>
     </nav>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset='utf-8' />
+    <meta name='viewport' content='width=device-width, initial-scale=1' />
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
-      crossorigin="anonymous">
+      href='https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css'
+      rel='stylesheet'
+      integrity='sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx'
+      crossorigin='anonymous'
+    />
     <h1>Profile</h1>
-    <br/>
-    </head>
-    <body>
-      <div class="card">
-        <img
-          src="https://wallpaperspeed.id/gallery/wallpaper/20220427/who-are-some-good-anime-characters-for-a-profile-picture,best-anime-characters-for-profile-picture-preview.webp"
-          alt="John" style="width:20%">
-        <ul class="user">
-          <h1>{{user.firstName}} {{user.lastName}}</h1>
-          <li>{{user.email}}</li>
-          <a>{{user._id}}</a>
-
-        </ul>
-      </div>
-      <div>
-        <ul class='posts'>
-          {{#each posts}}
+    <br />
+  </head>
+  <body>
+    <div class='card'>
+      <img
+        src='https://wallpaperspeed.id/gallery/wallpaper/20220427/who-are-some-good-anime-characters-for-a-profile-picture,best-anime-characters-for-profile-picture-preview.webp'
+        alt='John'
+        style='width:20%'
+      />
+      <ul class='user'>
+        <h1>{{user.firstName}} {{user.lastName}}</h1>
+        <li>{{user.email}}</li>
+      </ul>
+    </div>
+    <div>
+      <ul class='posts'>
+        {{#each posts}}
           <li>
             <p>{{this.timePosted}}<br />{{this.user.firstName}}
-              {{this.user.lastName}} - {{this.message}}</p>
+              {{this.user.lastName}}
+              -
+              {{this.message}}</p>
             <p>Likes: {{this.likes.count}}</p>
             <div>
               <style>
-              #like-btn { cursor: pointer; border: transparent;
-              background-color: transparent; height: 24px; width: 24px; color:
-              #e68496; font-size: 1.5em; box-shadow: 0; }
-            </style>
+                #like-btn { cursor: pointer; border: transparent;
+                background-color: transparent; height: 24px; width: 24px; color:
+                #e68496; font-size: 1.5em; box-shadow: 0; }
+              </style>
               <form
                 action='/posts/like/{{this._id}}'
                 method='post'
-                id='like-form'>
+                id='like-form'
+              >
                 <button id='like-btn' type='submit'>
                   <i class='{{this.likes.icon}}' id='heart-icon'></i>
                 </button>
               </form>
             </div>
 
-            <form id="delete-post-form" action="/posts/{{this._id}}/delete"
-              method="POST">
-              <input type="hidden" name="_method" value="DELETE">
-              <input type="submit" value="delete">
+            <form
+              id='delete-post-form'
+              action='/posts/{{this._id}}/delete'
+              method='POST'
+            >
+              <input type='hidden' name='_method' value='DELETE' />
+              <input type='submit' value='delete' />
             </form>
           </li>
-          {{/each}}
-        </ul>
-      </div>
-      <script
-        src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
-        crossorigin="anonymous"></script>
-    </body>
-  </html>
+        {{/each}}
+      </ul>
+    </div>
+    <script
+      src='https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js'
+      integrity='sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa'
+      crossorigin='anonymous'
+    ></script>
+  </body>
+</html>
