centralised profile page and added container to posts on bottome. Made dates smaller

--- a/views/home/index.hbs
+++ b/views/home/index.hbs
@@ -1,7 +1,4 @@
-<h1 class="title">{{title}}</h1>
-<p>Welcome to {{title}}</p>
-<p>Testing - heroku</p>
-
+<h1 class="title">Welcome to {{title}}!</h1>
 <div id="homepage-hero">
 <form action="/users/new" method="get">
     <input type="submit" value="Sign up!" />
