--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -10,7 +10,7 @@
         <h5>{{this.username}}</h5>
         {{this.content}}
       </li>
-      <p>{{this.date}}</p>
+      <p class="post-date">{{this.date}}</p>
 
       <div class="like-container">
         <button id="like-{{this.id}}" class="add-like" type="submit" value={{this.id}}>{{this.like.length}} 👍</button>
