--- a/views/users/profile.hbs
+++ b/views/users/profile.hbs
@@ -32,8 +32,7 @@
         {{#each friends}}
          <div id="profile-friends-card" class = "col-3">
          <li> 
-          {{this.firstName}}
-          {{this.lastName}}
+          <a href="../../users/profile/{{this.username}}">{{this.firstName}} {{this.lastName}}</a>
           </li>
          </div>
       {{/each}}
@@ -64,8 +63,7 @@
     <ul>
       {{#each friends}}
         <li>
-          {{this.firstName}}
-          {{this.lastName}}
+          <a href="../../users/profile/{{this.username}}">{{this.firstName}} {{this.lastName}}</a>
         </li>
       {{/each}}
     </ul>
