added date formatting to timeline posts

--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -41,7 +41,7 @@
         <h6>{{this.username}}</h6>
         <p>{{this.content}}<br>
 
-          {{this.date}}</p>
+          <p>{{this.date}}</p>
         <hr>
         {{/each}}
       </div>
