--- a/views/home/index.hbs
+++ b/views/home/index.hbs
@@ -1,10 +1,10 @@
 <h1 class="title">Welcome to {{title}}!</h1>
 <div id="homepage-hero">
 <form action="/users/new" method="get">
-    <input type="submit" value="Sign up!" />
+    <input class="btn btn-primary" type="submit" value="Sign up!" />
 </form>
 
 <form action="/sessions/new" method="get">
-    <input type="submit" value="Log in!" />
+    <input class="btn btn-primary" type="submit" value="Log in!" />
 </form>
 </div>
