--- a/views/users/search.hbs
+++ b/views/users/search.hbs
@@ -1,5 +1,8 @@
-<h1>Search</h1>
+
+<h1>Search- Test</h1>
+
 <ul class="search">
+
   {{#each users}}
   <li>{{this.firstName}}</li>
   <li>{{this.lasttName}}</li>
@@ -9,4 +12,6 @@
   {{!-- <button id="request-button" value={{this.id}}>Send friend request</button>
   <script type="text/javascript" src="/javascripts/friendship.js"> </script> --}}
   {{/each}}
+
 </ul>
+</div>
