--- a/views/users/profile.hbs
+++ b/views/users/profile.hbs
@@ -11,7 +11,7 @@
 
   <form action="/image" method="POST" enctype="multipart/form-data">
   <div>
-      <label for="image">Upload Profile Picture</label>
+      <label for="image">⬇️Upload Profile Picture⬇️</label>
       </br>
       <input class="btn btn-primary" type="file" id="image" name="image" value="" required />
     </div>
