--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -3,48 +3,68 @@
   <h1 class="timeline-title">My Timeline</h1>
 
   <ul class="posts">
-    {{#each posts}}
-    <div class="single-post">
+    {{#each allPostsAndPics}}
+      <div class="single-post">
 
-      <li class="post-content">
-        <h5>{{this.username}}</h5>
-        {{this.content}}
-      </li>
-      <p class="post-date">{{this.date}}</p>
+        <li class="post-content">
 
-      <div class="like-container">
-        <button id="like-{{this.id}}" class="add-like" type="submit" value={{this.id}}>{{this.like.length}} 👍</button>
-      </div>
-      <div class="comment-container">
-        <li>
-          <input type="text" name="commment" id={{this.id}} placeholder="add comment here!" />
-          <button id={{this.id}} class="submit-comment" type="submit" value={{this.id}}>💬</button>
+          <h5>          <a
+              href="users/profile/{{this.post.username}}"
+               <div>
+    <img id="profile-pic" src="data:{{this.post.picture.contentType}};base64, {{this.picture.img.data}}" style="height:150px;width:260px;" />
+  <div></a></h5>
+          {{this.post.content}}
         </li>
-      </div>
-      <div>
-        <button onclick="showComments('comments{{this.id}}')">Show/Hide comments</button>
-      </div>
+        <p class="post-date">{{this.post.date}}</p>
 
-      <script>
-        function showComments(id) {
-          const x = document.getElementById(id);
-          if (x.style.display === "none") {
-            x.style.display = "block";
-          } else {
-            x.style.display = "none";
-          }
-        }
-      </script>
+        <div class="like-container">
+          <button
+            id="like-{{this.post.id}}"
+            class="add-like"
+            type="submit"
+            value={{this.post.id}}
+          >{{this.post.like.length}} 👍</button>
+        </div>
+        <div class="comment-container">
+          <li>
+            <input
+              type="text"
+              name="commment"
+              id={{this.post.id}}
+              placeholder="add comment here!"
+            />
+            <button
+              id={{this.post.id}}
+              class="submit-comment"
+              type="submit"
+              value={{this.post.id}}
+            >💬</button>
+          </li>
+        </div>
+        <div>
+          <button onclick="showComments('comments{{this.post.id}}')">Show/Hide
+            comments</button>
+        </div>
 
-      <div class="allComments" style="display: none;" id="comments{{this.id}}">
-        {{#each this.comment}}
-        <h6>{{this.username}} commented: </h6>
-        <p>{{this.content}}</p>
-         <p class="post-date">{{this.date}}</p>
-        <hr>
-        {{/each}}
+        <script>
+          function showComments(id) { const x = document.getElementById(id); if
+          (x.style.display === "none") { x.style.display = "block"; } else {
+          x.style.display = "none"; } }
+        </script>
+
+        <div
+          class="allComments"
+          style="display: none;"
+          id="comments{{this.post.id}}"
+        >
+          {{#each this.post.comment}}
+            <h6>{{this.post.username}} commented: </h6>
+            <p>{{this.post.content}}</p>
+            <p class="post-date">{{this.post.date}}</p>
+            <hr />
+          {{/each}}
+        </div>
       </div>
-    </div>
 
     {{/each}}
   </ul>
