--- a/views/friends/search.hbs
+++ b/views/friends/search.hbs
@@ -8,11 +8,11 @@
   <li>{{this.user.firstName}}</li>
   <li>{{this.user.lastName}}</li>
   <form action="/users/profile/{{this.user.username}}" method="get">
-    <input class="btn btn-primary" type="submit" value="profile: {{this.user.firstName}}" />
+    <input class="btn btn-primary request-button" type="submit" value="profile: {{this.user.firstName}}" />
 
 </form>
   {{#if this.notFriends}}
-  <button class="btn btn-primary" value={{this.user.id}}>Send friend request</button>
+  <button class="btn btn-primary request-button" value={{this.user.id}}>Send friend request</button>
   <script type="text/javascript" src="/javascripts/friendship.js"> </script>
   {{/if }}
   {{/each}}
