added add like class

--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -14,7 +14,7 @@
       <p class="post-date">{{this.date}}</p>
 
       <div class="like-container">
-        <button class="btn btn-primary" id="like-{{this.id}}" class="add-like" type="submit" value={{this.id}}>{{this.like.length}} 👍</button>
+        <button class="add-like btn btn-primary" id="like-{{this.id}}" type="submit" value={{this.id}}>{{this.like.length}} 👍</button>
       </div>
       <div class="comment-container">
         <li>
