changed size of image

--- a/views/friends/index.hbs
+++ b/views/friends/index.hbs
@@ -33,7 +33,7 @@
               href="users/profile/{{this.user.username}}"
             >{{this.user.firstName}}
               {{this.user.lastName}}  <div>
-    <img id="profile-pic" src="data:{{this.picture.contentType}};base64, {{this.picture.img.data}}" style="height:150px;width:260px;" />
+    <img id="profile-pic" src="data:{{this.picture.contentType}};base64, {{this.picture.img.data}}" style="height:auto;width:50px;" />
   <div></a>
 
           </li>
@@ -58,7 +58,7 @@
               href="users/profile/{{this.user.username}}"
             >{{this.user.firstName}}
               {{this.user.lastName}}  <div>
-    <img id="profile-pic" src="data:{{this.picture.contentType}};base64, {{this.picture.img.data}}" style="height:150px;width:260px;" />
+    <img id="profile-pic" src="data:{{this.picture.contentType}};base64, {{this.picture.img.data}}" style="height:auto;width:50px;" />
   <div></a>
 
           </li>
@@ -75,7 +75,7 @@
               href="users/profile/{{this.user.username}}"
             >{{this.user.firstName}}
               {{this.user.lastName}}  <div>
-    <img id="profile-pic" src="data:{{this.picture.contentType}};base64, {{this.picture.img.data}}" style="height:150px;width:260px;" />
+    <img id="profile-pic" src="data:{{this.picture.contentType}};base64, {{this.picture.img.data}}" style="height:auto;width:50px;" />
   <div></a>
           </li>
         {{/each}}
