--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -12,7 +12,7 @@
           <h5>          <a
               href="users/profile/{{this.post.username}}"
                <div>
-    <img id="profile-pic" src="data:{{this.post.picture.contentType}};base64, {{this.picture.img.data}}" style="height:150px;width:260px;" />
+    <img id="profile-pic" src="data:{{this.post.picture.contentType}};base64, {{this.picture.img.data}}" style="height:auto;width:50px;" />
   <div></a></h5>
           {{this.post.content}}
         </li>
