--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -28,7 +28,7 @@
             <li class="nav-item">
               <form action='/sessions?_method=DELETE'
                 method='POST'>
-                <input type="submit" value="Logout" />
+                <input class="btn btn-outline-secondary" type="submit" value="Logout" />
               </form>
             </li>
           </ul>
@@ -47,20 +47,33 @@
       rel='stylesheet'/>
   </head>
   <body>
+    <div class="container">
+    <div class="row align-items-center vh-200">
+    <div class="col-10 mx-auto">
+    <div class="card-body d-flex flex-column align-items-center">
     <h1>Timeline</h1>
-
-    <ul class='posts'>
+    <br/>
+    {{!-- <button type="button" class="btn btn-outline-primary" href='/posts/new'>New post</button> --}}
+    <a class="btn btn-outline-primary" href='/posts/new' role="button">Add Post</a><br>
+    
+  
+      
       {{#each posts}}
-      <li>
+      <div class='posts' style="width:700px">
+      <div class="container" style="padding:15px"/>
+      <div class="row align-items-center vh-200">
+      <div class="col-60 mx-auto">
+      <div class="card shadow border">
+      <div class="card-body d-flex flex-column align-items-center">
         <form id="search-form" action="/search" method="POST">
           <input class="inline-form-input" id="firstName" type="hidden"
             name="firstName"
             value={{this.user.firstName}} />
-          <input class="search-form-btn" type="submit"
+          <input class="btn btn-link" type="submit"
             value='{{this.user.firstName}} {{this.user.lastName}}'/>
         {{this.timePosted}}
         </form>
-        <p>{{this.message}}</p>
+        <h3>{{this.message}}</h3>
 
         <p>Likes: {{this.likes.count}}</p>
         <div>
@@ -78,32 +91,47 @@
             </button>
           </form>
         </div>
-        </li>
+        </div>
 
-          {{#if_equal this.user.firstName @root.user.firstName}} 
-        <form id="delete-post-form" action="/posts/{{this._id}}/delete"
-          method="POST">
-          <input type="hidden" name="_method" value="DELETE">
-          <input type="submit" value="delete">
-        </form>
-          {{/if_equal}}
-
-        {{#each this.comments}}
-        <p>{{this.author}} - {{this.message}}</p>
-        {{/each}}
+        <ul class="list-group list-group-flush">
+          {{#each this.comments}}
+          <li class="list-group-item">{{this.author}} - {{this.message}}</li>
+          {{/each}}
+        </ul>
+        
+        <div class="list-group list-group-flush">
+        <div style="margin-left:15px; margin-top:5px">  
         <form
           id='new-comment-form'
           action='/posts/{{this._id}}/comment'
           method='post'>
           <label for='comment'>Comment: </label>
           <input id='comment' type='text' name='comment' value='' />
-          <input type='submit' value='Submit' />
+          <input type='submit' class="btn btn-outline-primary" value='Submit' />
         </form>
         <br />
-      </li>
+        <div style="position:relative, left:30px">
+        {{#if_equal this.user.firstName @root.user.firstName}} 
+        <form id="delete-post-form" action="/posts/{{this._id}}/delete"
+          method="POST">
+          <input type="hidden" name="_method" value="DELETE">
+          <input type="submit" class="btn btn-outline-danger" value="Delete Post">
+        </form>
+        </div>
+          {{/if_equal}}
+        </br>
+        </div>
+        </div>  
+      </div>
+      </div>
+      </div>
+      </div> 
+      </div> 
       {{/each}}
-    </ul>
-    <a class='new-post-link' href='/posts/new'>New post</a>
+    </div>
+    </div>
+    </div>
+    </div>
   </body>
   <script
     src='https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js'
