--- a/views/users/profile.hbs
+++ b/views/users/profile.hbs
@@ -44,13 +44,20 @@
       href='https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css'
       rel='stylesheet'
       integrity='sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx'
-      crossorigin='anonymous'
-    />
+      crossorigin='anonymous'/>
+    <link
+      href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css'
+      rel='stylesheet'/>
+    
     <h1>Profile</h1>
     <br />
   </head>
   <body>
     <div class='card'>
+    <div class="container">
+    <div class="row align-items-center vh-200">
+    <div class="col-10 mx-auto">
+    <div class="card-body d-flex flex-column align-items-center">
       <img
         src='https://wallpaperspeed.id/gallery/wallpaper/20220427/who-are-some-good-anime-characters-for-a-profile-picture,best-anime-characters-for-profile-picture-preview.webp'
         alt='John'
@@ -61,44 +68,81 @@
         <li>{{user.email}}</li>
       </ul>
     </div>
-    <div>
-      <ul class='posts'>
+    <div style="text-align:center"><h5>Your Posts</h5></div>
+    <div style="margin-left: 200px">
+      
         {{#each posts}}
-          <li>
-            <p>{{this.timePosted}}<br />{{this.user.firstName}}
-              {{this.user.lastName}}
-              -
-              {{this.message}}</p>
-            <p>Likes: {{this.likes.count}}</p>
-            <div>
-              <style>
-                #like-btn { cursor: pointer; border: transparent;
-                background-color: transparent; height: 24px; width: 24px; color:
-                #e68496; font-size: 1.5em; box-shadow: 0; }
-              </style>
-              <form
-                action='/posts/like/{{this._id}}'
-                method='post'
-                id='like-form'
-              >
-                <button id='like-btn' type='submit'>
-                  <i class='{{this.likes.icon}}' id='heart-icon'></i>
-                </button>
-              </form>
-            </div>
+      <div class='posts' style="width:75%">
+      <div class="container" style="padding:15px"/>
+      <div class="row align-items-center vh-200">
+      <div class="col-60 mx-auto">
+      <div class="card shadow border">
+      <div class="card-body d-flex flex-column align-items-center">
+        <form id="search-form" action="/search" method="POST">
+          <input class="inline-form-input" id="firstName" type="hidden"
+            name="firstName"
+            value={{this.user.firstName}} />
+          <input class="btn btn-link" type="submit"
+            value='{{this.user.firstName}} {{this.user.lastName}}'/>
+        {{this.timePosted}}
+        </form>
+        <h3>{{this.message}}</h3>
 
-            <form
+        <p>Likes: {{this.likes.count}}</p>
+        <div>
+          <style>
+              #like-btn { cursor: pointer; border: transparent;
+              background-color: transparent; height: 24px; width: 24px; color:
+              #e68496; font-size: 1.5em; box-shadow: 0; }
+            </style>
+          <form
+            action='/posts/like/{{this._id}}'
+            method='post'
+            id='like-form'>
+            <button id='like-btn' type='submit'>
+              <i class='{{this.likes.icon}}' id='heart-icon'></i>
+            </button>
+          </form>
+        </div>
+        </div>
+
+        <ul class="list-group list-group-flush">
+          {{#each this.comments}}
+          <li class="list-group-item">{{this.author}} - {{this.message}}</li>
+          {{/each}}
+        </ul>
+        
+        <div class="list-group list-group-flush">
+        <div style="margin-left:15px; margin-top:5px">  
+        <form
+          id='new-comment-form'
+          action='/posts/{{this._id}}/comment'
+          method='post'>
+          <label for='comment'>Comment: </label>
+          <input id='comment' type='text' name='comment' value='' />
+          <input type='submit' class="btn btn-outline-primary" value='Submit' />
+        </form>
+        <br />
+        <div style="position:relative, left:30px">
+        <form
               id='delete-post-form'
               action='/posts/{{this._id}}/delete'
               method='POST'
             >
               <input type='hidden' name='_method' value='DELETE' />
-              <input type='submit' value='delete' />
+              <input type='submit' class="btn btn-outline-danger" value='delete' />
             </form>
-          </li>
-        {{/each}}
-      </ul>
-    </div>
+        </div>
+        </br>
+        </div>
+        </div>  
+      </div>
+      </div>
+      </div>
+      </div> 
+      </div> 
+      {{/each}}
+    
     <script
       src='https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js'
       integrity='sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa'
