--- a/views/home/index.hbs
+++ b/views/home/index.hbs
@@ -1,7 +1,26 @@
-<h1 class="title">{{title}}</h1>
-<p>Welcome to {{title}}</p>
-<p>Making you feel connected!</p>
-
-<form action="/sessions/new" method="get">
-      <input id="submit" type="submit" value="go to login page"/>
-  </form>
+<html>
+    <head></head>
+    <link
+        href='https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css'
+        rel='stylesheet'
+        integrity='sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx'
+        crossorigin='anonymous'/>
+    <link
+        href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css'
+        rel='stylesheet'/>
+    <body style="height:100vh">
+        <div style="margin-left:200px;">
+            <img src='/images/welcome.jpg' alt="John"
+                style="width:650px;height:650px;" />
+        </div>
+        <form class="row g-3" action="/sessions/new" method="get">
+            <input id="submit" class="btn btn-primary" type="submit"
+                value="Login page" />
+        </form>
+    </body>
+    <script
+        src='https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js'
+        integrity='sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa'
+        crossorigin='anonymous'>
+  </script>
+</html>
