--- a/views/search/index.hbs
+++ b/views/search/index.hbs
@@ -2,7 +2,8 @@
   <head>
     <nav class='navbar navbar-expand-lg bg-light'>
       <div class='container-fluid'>
-        <a class='navbar-brand' href='#'>AceBook</a>
+        <img src='/images/acebook.jpg' alt="John"
+          style="width:50px;height:50px;" />
         <button
           class='navbar-toggler'
           type='button'
