--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -1,3 +1,6 @@
+<form action='/sessions?_method=DELETE' method='POST' >
+      <input id="logout" type="submit" value="Log out">
+</form>
 <h1>Timeline</h1>
 <ul class="posts">
   {{#each posts}}
