--- a/views/home/index.hbs
+++ b/views/home/index.hbs
@@ -1,13 +1,19 @@
 <h1 class="title">{{title}}</h1>
 <p>Welcome to {{title}}</p>
 
-<form id="new-session-form" action="/sessions" method="post">
+<form id="new-session-form" action="/sessions" method="POST">
   <div class="login-form">
-  <input id="email" type="email" name="email" value="" placeholder="Email">
+    <input id="email" type="email" name="email" value="" placeholder="Email" />
   </div>
   <div class="login-form">
-  <input id="password" type="password" name="password" value="" placeholder="Password">
+    <input
+      id="password"
+      type="password"
+      name="password"
+      value=""
+      placeholder="Password"
+    />
   </div>
 
-  <input id="login" type="submit" value="Login">
+  <input id="login" type="submit" value="Login" />
 </form>
