--- a/views/profiles/index.hbs
+++ b/views/profiles/index.hbs
@@ -1,4 +1,8 @@
-<h1 id="profile-header">{{profileUsername}}'s profile<h1>
-<form id="friend-request" action="/friend/request/new/{{profileUsername}}/{{currentUsername}}" method="POST">
-  <input type="submit" value="Add Friend">
+<h1 id="profile-header">{{profileUsername}}'s profile</h1>
+<form
+  id="friend-request"
+  action="/friend/request/new/{{profileUsername}}/{{currentUsername}}"
+  method="POST"
+>
+  <input type="submit" value="Add Friend" />
 </form>
