--- a/views/home/index.hbs
+++ b/views/home/index.hbs
@@ -11,3 +11,8 @@
 
   <input id="login" type="submit" value="Login">
 </form>
+
+<div id="new-user">
+  <p>Don't have an account?</p>
+  <a href='/users/new'>Sign up here</a>
+</div>
