Updated mongodb helper and view>posts

--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -1,11 +1,23 @@
+<h1 class="title">{{title}}</h1>
+
 <form action='/sessions?_method=DELETE' method='POST' >
       <input id="logout" type="submit" value="Log out">
+      
 </form>
+
+<br>
+
+<form id="new-post-form" action="/posts" method="post">
+  <label for="message">Whats on your mind? </label>
+  <input id="message" type="text" name="message" value="">
+  <input type="submit" value="Submit">
+</form>
+
+<div id="blank message">{{blank}}</div>
+
 <h1>Timeline</h1>
 <ul class="posts">
   {{#each posts}}
   <li>{{this.message}}</li>
   {{/each}}
 </ul>
-
-<a class="new-post-link" href="/posts/new">New post</a>
