--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -1,8 +1,8 @@
 <h1 class="title">{{title}}</h1>
 
-<form action='/sessions?_method=DELETE' method='POST' >
-      <input id="logout" type="submit" value="Log out">
-      
+<form action='/sessions?_method=DELETE' method='POST'>
+  <input id="logout" type="submit" value="Log out">
+
 </form>
 
 <br>
@@ -10,7 +10,7 @@
 <form id="new-post-form" action="/posts" method="post">
   <label for="message">Whats on your mind? </label>
   <input id="message" type="text" name="message" value="">
-  <input type="submit" value="Submit">
+  <input id="submit" type="submit" value="Submit">
 </form>
 
 <div id="blank message">{{blank}}</div>
