blank post test now passing

--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -13,7 +13,7 @@
   <input id="submit" type="submit" value="Submit">
 </form>
 
-<div id="blank message">{{blank}}</div>
+<div id="blank-message">{{blank}}</div>
 
 <h1>Timeline</h1>
 <ul class="posts">
