Added a profile page

--- a/views/profile/index.hbs
+++ b/views/profile/index.hbs
@@ -2,5 +2,12 @@
 
 <form action='/sessions?_method=DELETE' method='POST'>
   <input id="logout" type="submit" value="Log out">
-
 </form>
+<p>Welcome {{name}}</p>
+
+<img src="{{{url}}}" width="230" 
+     height="200"/> 
+
+<br>
+
+<a href="/posts">Back to posts</a>
