--- a/views/users/new.hbs
+++ b/views/users/new.hbs
@@ -4,6 +4,8 @@
   <input id="email" type="email" name="email" value="">
   <label for="password">Password: </label>
   <input id="password" type="password" name="password" value="">
+  <label for="firstName">First name: </label>
+  <input id="firstName" type="firstName" name="firstName" value="">
   <input id="submit" type="submit" value="Submit">
 </form>
 <a href="/sessions/new">Sign in</a>
