--- a/views/users/new.hbs
+++ b/views/users/new.hbs
@@ -8,4 +8,4 @@
   <input id="firstName" type="firstName" name="firstName" value="">
   <input id="submit" type="submit" value="Submit">
 </form>
-<a href="/sessions/new">Sign in</a>
+<a href="/">Sign in</a>
