Fixed the image to auto correct size

--- a/views/profile/index.hbs
+++ b/views/profile/index.hbs
@@ -5,8 +5,8 @@
 </form>
 <p>Welcome {{name}}</p>
 
-<img src="{{{url}}}" width="230" 
-     height="200"/> 
+<img src="{{{url}}}" width="200px" 
+     height="auto"/> 
 
 <br>
 
